# DroneRL-SmartCityDroneDelivery

./: .coverage 2  .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
analysis/: __init__.py  _runner.py  alpha_decay_sweep.py  cost_profile.py  multi_seed_robustness.py  noise_sweep.py
config/: config.yaml
data/: README.md
data/analysis/: cost_profile.json
docs/: ARCHITECTURE.md  INDEX.md  TODO.md
docs/assignment-1/: PLAN.md  PRD.md  PRD_q_learning.md  TODO.md
docs/assignment-2/: COST_ANALYSIS.md  EXPERIMENTS.md  PLAN_double_q_learning.md  PLAN_dynamic_board.md  PLAN_q_learning.md  PRD_double_q_learning.md  PRD_dynamic_board.md  PRD_q_learning.md  TODO_double_q_learning.md  TODO_dynamic_board.md  TODO_q_learning.md
docs/shared/: ARCHITECTURE.md  CONCURRENCY.md  FINAL_CHECKLIST.md  PROMPTS.md  QUALITY_STANDARDS.md
notebooks/: README.md  research_analysis.ipynb
results/analysis/: cost_profile.json
scripts/: capture_assignment2_screenshots.py  capture_screenshots.py  check_file_sizes.sh  check_no_secrets.sh  generate_comparison_charts.py
src/: __init__.py  actions.py  agent.py  agent_factory.py  algorithms.py  base_agent.py  buttons.py  comparison.py  config_loader.py  dashboard.py  double_q_agent.py  editor.py  environment.py  game_logic.py  gui.py  hazard_generator.py  logger.py  overlays.py  q_agent.py  renderer.py  sdk.py  sliders.py  trainer.py
src/dronerl/: __init__.py  actions.py  agent.py  agent_factory.py  algorithms.py  base_agent.py  comparison.py  config_loader.py  constants.py  dashboard.py  double_q_agent.py  editor.py  environment.py  game_logic.py  gui.py  hazard_generator.py  overlays.py  q_agent.py  renderer.py  sdk.py  sliders.py  trainer.py
tests/: README.md  __init__.py  conftest.py  test_actions.py  test_agent.py  test_agent_factory.py  test_algorithms.py  test_base_agent.py  test_base_agent_decay_io.py  test_comparison.py  test_config_loader.py  test_double_q_agent.py  test_environment.py  test_environment_cells.py  test_game_logic.py  test_gui.py  test_hazard_generator.py  test_q_agent.py  test_rendering.py  test_sdk.py  test_sdk_comparison.py  test_sliders.py  test_trainer.py  test_ui_components.py  test_ui_editor_dashboard.py
tests/integration/: __init__.py  test_parallel_runner.py  test_sdk_comparison.py  test_ui_editor_dashboard.py
tests/unit/: __init__.py  test_actions.py  test_agent.py  test_agent_factory.py  test_algorithms.py  test_base_agent.py  test_base_agent_decay_io.py  test_buttons.py  test_comparison.py  test_config_loader.py  test_constants.py  test_dashboard.py  test_double_q_agent.py  test_editor.py  test_environment.py  test_environment_cells.py  test_extensibility_recipe.py  test_game_logic.py  test_gui.py  test_hazard_generator.py  test_logger.py  test_overlays.py  test_q_agent.py  test_renderer.py  test_rendering.py  test_sdk.py  test_sliders.py  test_trainer.py  test_ui_components.py
